--- a/notebooks/LTRO_Tool.ipynb
+++ b/notebooks/LTRO_Tool.ipynb
@@ -32,8 +32,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -684,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
