--- a/notebooks/LTRO_Tool.ipynb
+++ b/notebooks/LTRO_Tool.ipynb
@@ -57,7 +57,7 @@
     "r = \"OM\"\n",
     "s = \"Carton\"\n",
     "c = []\n",
-    "loc = \"datas/Data cleared.xlsx\"  # Location where the cleaned data is present\n",
+    "loc = '../input/Data_cleared.xlsx'  # Location where the cleaned data is present\n",
     "'''d = '191' #Enter the point where the prediction has to be made. Make sure it is in 'str' format\n",
     "m = 1 # m = 0,1,2,3 for BX,Verre,OM,Carton respectively'''\n",
     "\n",
@@ -434,7 +434,7 @@
     "m = 0 # Input type of waste - 0,1,2,3 for BX,Verre,OM,Carton respectively\n",
     "\n",
     "# ///OTHER VARIABLES///\n",
-    "dist = pd.read_excel(\"Distances.xlsx\", sheet_name=1) #Distance from the depot to various location\n",
+    "dist = pd.read_excel(\"../input/Distances.xlsx\", sheet_name=1) #Distance from the depot to various location\n",
     "\n",
     "# ///FUNCTIONS///\n",
     "\n",
@@ -449,7 +449,7 @@
     "\n",
     "def Selectpoints(date):   #Selects datapoints from the predicted data for a single date\n",
     "    date = date\n",
-    "    df = pd.read_excel(\"Predictions.xlsx\", sheet_name = m )\n",
+    "    df = pd.read_excel(\"../input/Predictions.xlsx\", sheet_name = m )\n",
     "    df['date']=pd.to_datetime(df['date'])\n",
     "    df['n_point'] = df['n_point'].astype(str)\n",
     "    df['day'] = [i.day for i in df['date']]\n",
@@ -528,18 +528,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Route distance: 0metres\n",
+      "Tour 1: [328, 204, 165, 228, 227, 226, 146, 213, 151, 147, 159, 104, 197, 77, 328]\n",
+      "\n",
+      "Route distance: 0metres\n",
+      "Tour 2: [328, 61, 264, 4, 328]\n",
+      "\n",
+      "Route distance: 0metres\n",
+      "Tour 3: [328, 121, 223, 241, 97, 91, 125, 98, 100, 90, 102, 328]\n",
+      "\n",
+      "Route distance: 0metres\n",
+      "Tour 4: [328, 272, 160, 80, 328]\n",
+      "\n",
+      " [[328, 204, 165, 228, 227, 226, 146, 213, 151, 147, 159, 104, 197, 77, 328], [328, 61, 264, 4, 328], [328, 121, 223, 241, 97, 91, 125, 98, 100, 90, 102, 328], [328, 272, 160, 80, 328]]\n"
+     ]
+    }
+   ],
    "source": [
     "from ortools.constraint_solver import routing_enums_pb2\n",
     "from ortools.constraint_solver import pywrapcp\n",
     "import pandas as pd\n",
-    "\n",
+    "import numpy as np\n",
     "#Enter the list of locations where VRP needs to be implemented\n",
     "\n",
     "#loc is the output from clustering\n",
@@ -550,7 +571,7 @@
     "def distMat(loc):\n",
     "    loc1 = loc.copy()\n",
     "    loc1 = np.insert(loc,0,328) # depot location\n",
-    "    df = pd.read_excel(\"D:/Grenoble INP-SIE/Semester 3/Logistics and OR/PROJECTS/PROJECTS/LTRO_Project Files/Project Codes/Distances.xlsx\", sheet_name=2, header=None)\n",
+    "    df = pd.read_excel(\"../input/Distances.xlsx\", sheet_name=2, header=None)\n",
     "    df = df.loc[loc1,loc1] # to extract distance matrix for specific locations alone\n",
     "    m = df.to_numpy() # to create a numpy array for distance matrix\n",
     "    return m\n",
