--- a/notebooks/Multiple Forecast.ipynb
+++ b/notebooks/Multiple Forecast.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -58,8 +58,8 @@
     "r = \"OM\"\n",
     "s = \"Carton\"\n",
     "c = []\n",
-    "loc = \"Data cleared.xlsx\"  # Location where the cleaned data is present\n",
-    "'''d = '191' #Enter the point where the prediction has to be made. Make sure it is in 'str' format\n",
+    "loc = '../input/Data_cleared.xlsx'  # Location where the cleaned data is present\n",
+    "d = '191' #Enter the point where the prediction has to be made. Make sure it is in 'str' format\n",
     "m = 1 # m = 0,1,2,3 for BX,Verre,OM,Carton respectively'''\n",
     "\n",
     "# ///FUNCTIONS///\n",
@@ -324,36 +324,42 @@
     "\n",
     "def prediction(df):  # Use the prediction function of the model with the lowest MSE to make predictions\n",
     "    min_rmse = minRMSE(df)\n",
-    "    '''print('RMSE using Exponential smoothing: ',esEval(df))\n",
+    "    print('RMSE using Exponential smoothing: ',esEval(df))\n",
     "    print('RMSE using AR Model: ', arEval(df))\n",
     "    print('RMSE using ARMA Model: ', armaEval(df))\n",
     "    print('RMSE using ARIMA Model: ', arimaEval(df))\n",
-    "    print('RMSE using SARIMA Model: ', sarimaEval(df))'''\n",
+    "    print('RMSE using SARIMA Model: ', sarimaEval(df))\n",
     "    \n",
     "    if min_rmse == esEval(df):\n",
-    "        #print('minimun RMSE was found using Exponential Smoothing ')\n",
-    "        #print('min_mse =',min_rmse)\n",
+    "        print('minimun RMSE was found using Exponential Smoothing ')\n",
+    "        print('min_mse =',min_rmse)\n",
     "        return esModel(df)\n",
     "    elif min_rmse == arEval(df):\n",
-    "        #print('minimun RMSE was found using AR Model ')\n",
-    "        #print('min_mse =',min_rmse)\n",
+    "        print('minimun RMSE was found using AR Model ')\n",
+    "        print('min_mse =',min_rmse)\n",
     "        return arModel(df)\n",
     "    elif min_rmse == armaEval(df):\n",
-    "        #print('minimun RMSE was found using ARMA Model ')\n",
-    "        #print('min_mse =',min_rmse)\n",
+    "        print('minimun RMSE was found using ARMA Model ')\n",
+    "        print('min_mse =',min_rmse)\n",
     "        return armaModel(df)\n",
     "    elif min_rmse == arimaEval(df):\n",
-    "        #print('minimun RMSE was found using ARIMA Model ')\n",
-    "        #print('min_mse =',min_rmse)\n",
+    "        print('minimun RMSE was found using ARIMA Model ')\n",
+    "        print('min_mse =',min_rmse)\n",
     "        return arimaModel(df)\n",
     "    else:\n",
-    "        #print('minimun RMSE was found using SARIMA Model ')\n",
-    "        #print('min_mse =',min_rmse)\n",
+    "        print('minimun RMSE was found using SARIMA Model ')\n",
+    "        print('min_mse =',min_rmse)\n",
     "        return sarimaModel(df)\n",
     "        \n",
     "def minRMSE(df):\n",
     "    min_rmse = min(esEval(df),arEval(df),armaEval(df),arimaEval(df),sarimaEval(df))\n",
-    "    return min_rmse"
+    "    return min_rmse\n",
+    "\n",
+    "df = SelectPoints(d,m)  \n",
+    "df['days before last pick up'] = df['days before last pick up'].apply(pd.to_numeric, errors='coerce')\n",
+    "n = df['days before last pick up'].mean(skipna=True)\n",
+    "\n",
+    "prediction(df)"
    ]
   },
   {
@@ -545,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
